# lidar_object_detection

./: .gitignore  CMakeLists.txt  package.xml
cfg/: dbscan_cluster_node_params.yaml  euclidean_cluster_node_params.yaml
include/lidar_object_detection/: HTRBasicDataStructures.h  OctreeGenerator.h  cluster.h  dbScan.h  euclidean_cluster.hpp  euclidean_cluster_interface.hpp  utils.hpp
launch/: dbscan_cluster_launch.py  dbscan_cluster_launch.xml  euclidean_cluster_launch.py  euclidean_cluster_launch.xml
lib/: OctreeGenerator.cpp  cluster.cpp  dbScan.cpp  euclidean_cluster.cpp
src/: dbscan_cluster_node.cpp  dbscan_cluster_node.hpp  euclidean_cluster_node.cpp  euclidean_cluster_node.hpp  lidar_object_detection.cpp
